--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "co-wechat": "^2.3.0",
     "co-wechat-oauth": "^2.0.1",
     "egg": "^2.2.1",
-    "egg-scripts": "^2.5.0"
+    "egg-scripts": "^2.5.0",
+    "egg-view-ejs": "^2.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
