--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "egg": "^2.2.1",
     "egg-redis": "^2.1.0",
     "egg-scripts": "^2.5.0",
+    "egg-static": "^2.1.1",
     "egg-view-ejs": "^2.0.0",
     "egg-wechat-api": "^1.2.2"
   },
