--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "co-wechat": "^2.3.0",
     "co-wechat-oauth": "^2.0.1",
     "egg": "^2.2.1",
+    "egg-mongoose": "^3.1.1",
     "egg-redis": "^2.1.0",
     "egg-scripts": "^2.5.0",
     "egg-static": "^2.1.1",
